Implementing motivational quote and image selection functionality in popup:still left to fix the redefinition of quotes error

--- a/popup.html
+++ b/popup.html
@@ -165,7 +165,7 @@
             <input type="radio" name="selection" id="quote-radio" />
             Get a Motivational Quote
           </label>
-          <button id="quote" class="quote-btn" style="display: none">
+          <button id="quoteButton" class="quote-btn" style="display: none">
             Get Quote
           </button>
 
@@ -180,7 +180,7 @@
               class="image-input"
               placeholder="Enter Image URL"
             />
-            <button id="get-image" class="image-btn">Select Image</button>
+            <button id="imageButton" class="image-btn">Select Image</button>
           </div>
         </div>
       </div>
